[package]
name = "veriskobot"
version = "0.1.0"
authors = ["foxxer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.7.0"
tokio = { version = "0.2.22", features = ["full"] }
futures = "0.3.5"
markov = "1.1.0"
chrono = "0.4.13"

[profile.release]
